--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "service worker",
   "main": "app.js",
   "scripts": {
-    "build": "workbox injectManifest workbox-config.js"
+    "build": "webpack",
+    "serve": "npm run build && lite-server"
   },
   "keywords": [],
   "author": "Carlton Joseph",
   "license": "ISC",
   "devDependencies": {
-    "workbox-cli": "^3.6.3"
+    "copy-webpack-plugin": "^4.6.0",
+    "lite-server": "^2.4.0",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
+    "workbox-cli": "^3.6.3",
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
